--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <img src="images/Branding.svg" alt="Branding">
             <p class="description">Facebook helps you connect and share with the people in your life.</p>
         </div>
-        <div>
+        
+            <div class="bpanel">
         <div class="panel">
             <form>
                 <input type="text" name="username" placeholder="Email address or Phone number" required>
